--- a/vite-project/resume.html
+++ b/vite-project/resume.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&family=Montserrat&family=Open+Sans:wght@500&family=Roboto+Slab:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vivian Zhou</title>
@@ -59,10 +62,12 @@
 </section>
 
 <section class ="footer">
-    <div class="icons">
-      <a href="https://github.com/vivianzhou1288" target="_blank"><i class="fa fa-github"></i></a>
-    </div>
-    <h5>Copyright © 2022 Vivian Zhou.</h5>
+  <h3>Reach Out To Me</h3>
+  <div class="icons">
+    <a href="https://github.com/vivianzhou1288" target="_blank"><i class="fa fa-github"></i></a>
+    <a href="https://www.linkedin.com/in/vivian-zhou-a7bb21203" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
+  <h5>Copyright © 2022 Vivian Zhou.</h5>
 </section>
 
     <script type="module" src="./js/resume.js"></script>
