--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -27,7 +27,7 @@
 <section class="intro">
 <div class ="everything">
 <div class = "texts">
-  <h1 class ="title-intro">Hi, I am Vivian Zhou 
+  <h1 class ="title-intro">Hi, I am Vivian Zhou. 
   </h1>
   <p class = "title-subtitle">Student</p>
 </div>
