--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -40,7 +40,7 @@
 <!--About Me-->
 <div class = "description">
   <h1>About Me</h1>
-  <p>I am Vivian Zhou, and I am a senior at Staten Island Technical High School. I will be an incoming freshman at Cornell University.
+  <p>I am Vivian Zhou, and I am freshman at Cornell University. I am studying at the College of Engineering and am planning to major in Computer Science.
   </p>
 </div>
 
